--- a/sass/partials/_use-card.scss
+++ b/sass/partials/_use-card.scss
@@ -1,52 +1,65 @@
-.howto__card{
+.howto__card {
+  @include row;
+  justify-content: flex-start;
+  align-items: center;
+
+  .howto__card-number {
+    width: 24px;
+    height: 24px;
+    line-height: 24px;
+    margin: 0 0 0 20px;
+    position: absolute;
+    background-color: $first-color;
+    border-radius: 12px;
+    z-index: 2;
+    color: $white;
+    @include fat;
+  }
+
+  div {
+    @include boxbasic;
     @include row;
-    justify-content: flex-start;
-    align-items: center;
+    @include ombrage-medium;
+    @include card;
+    background-color: $light-grey;
+    margin: 15px 10px 15px 20px;
+    padding-left: 40px;
+    gap: 10px;
+    position: relative;
+    z-index: 1;
+    transition: all ease-in-out 0.4s;
 
-    .howto__card-number{
-        width: 24px;
-        height: 24px;
-        line-height: 24px;
-        margin: 0 0 0 20px;
-        position: absolute;
-        background-color: $first-color;
-        border-radius: 12px;
-        z-index: 2;
-        color: $white;
-        @include fat;
+
+    h4 {
+      line-height: 30px;
     }
 
-    div{
-        @include boxbasic;
-        @include row;
-        @include ombrage-medium;
-        @include card;
-        background-color: $light-grey;
-        margin: 15px 15px 15px 30px;
-        padding-left: 40px;
-        gap: 20px;
-        position: relative;
-        z-index: 1;
-        
-        .fa-solid{
-            color: $dark-grey;
-            transition: color 0.4s;
-        }
-
-        &:hover .fa-solid{
-            color: $first-color;
-        }
-        
-    }
-    
-    //  ***   MEDIA QUERIES DESKTOP    ***   MEDIA QUERIES DESKTOP  ***
-    @media (min-width : 1024px) {
-        width: 33%;
+    .fa-solid {
+      color: $dark-grey;
+      padding: 0;
+      line-height: 30px;
+      transition: color 0.4s;
     }
 
-    //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
-    @media (min-width : 768px) and (max-width: 1024px) {
-
+    &:hover .fa-solid {
+      color: $first-color;
     }
 
+    &:hover {
+    @include ombrage-dark;
+  }
+
+  }
+
+
+  //  ***   MEDIA QUERIES DESKTOP    ***   MEDIA QUERIES DESKTOP  ***
+  @media (min-width: 1024px) {
+    width: 33%;
+  }
+
+  //  ***   MEDIA QUERIES TABLETTE    ***   MEDIA QUERIES TABLETTE  ***
+  @media (min-width: 768px) and (max-width: 1024px) {
+    width: 60%;
+    align-self: center;
+  }
 }
