--- a/sass/index.css
+++ b/sass/index.css
@@ -324,6 +324,8 @@ section {
 h1 {
   font-size: 1.4em;
   font-weight: 700;
+  margin: 0;
+  margin-bottom: 40px;
 }
 
 p {
@@ -359,13 +361,13 @@ a {
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   section {
-    padding: 10px 30px;
+    padding: 30px 30px;
   }
   .howto {
     width: 100%;
     box-sizing: border-box;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
   }
   .restaurant__list {
@@ -423,7 +425,7 @@ header .header__location input {
 }
 
 .button__gradient {
-  background: linear-gradient(to top, #9356dc, #ff79da);
+  background: linear-gradient(#9256dc, #ff79da);
   color: #ffffff;
   height: 50px;
   width: -moz-fit-content;
@@ -441,7 +443,8 @@ header .header__location input {
 }
 
 .button__gradient:hover {
-  background: linear-gradient(to bottom, #9356dc, #ff79da);
+  box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.2549019608);
+  background: linear-gradient(#a06be0, #ff93e1);
   transition: all ease-in-out 0.3s;
 }
 
@@ -497,7 +500,7 @@ header .header__location input {
 .restaurant__rate span .fa-solid {
   display: flex;
   color: transparent;
-  background-image: linear-gradient(#ff79da, #9356dc);
+  background-image: linear-gradient(#ff79da, #9256dc);
   -webkit-background-clip: text;
           background-clip: text;
 }
@@ -516,7 +519,7 @@ header .header__location input {
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1019607843);
 }
 .chevron :hover {
-  color: #9356dc;
+  color: #9256dc;
 }
 .chevron i {
   padding: 0;
@@ -579,7 +582,7 @@ header .header__location input {
   line-height: 24px;
   margin: 0 0 0 20px;
   position: absolute;
-  background-color: #9356dc;
+  background-color: #9256dc;
   border-radius: 12px;
   z-index: 2;
   color: #ffffff;
@@ -594,24 +597,40 @@ header .header__location input {
   background-color: #ffffff;
   border-radius: 15px;
   background-color: #f6f6f6;
-  margin: 15px 15px 15px 30px;
+  margin: 15px 10px 15px 20px;
   padding-left: 40px;
-  gap: 20px;
+  gap: 10px;
   position: relative;
   z-index: 1;
+  transition: all ease-in-out 0.4s;
+}
+.howto__card div h4 {
+  line-height: 30px;
 }
 .howto__card div .fa-solid {
   color: #353535;
+  padding: 0;
+  line-height: 30px;
   transition: color 0.4s;
 }
 .howto__card div:hover .fa-solid {
-  color: #9356dc;
+  color: #9256dc;
+}
+.howto__card div:hover {
+  box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.2549019608);
 }
 @media (min-width: 1024px) {
   .howto__card {
     width: 33%;
   }
 }
+@media (min-width: 768px) and (max-width: 1024px) {
+  .howto__card {
+    width: 60%;
+    align-self: center;
+  }
+}
+
 .restaurant__card {
   width: 100%;
   box-sizing: border-box;
@@ -622,6 +641,7 @@ header .header__location input {
   height: 250px;
   overflow: hidden;
   justify-content: space-between;
+  transition: all ease-in-out 0.4s;
 }
 .restaurant__card .restaurant__photo {
   width: 100%;
@@ -657,6 +677,9 @@ header .header__location input {
   color: #000000;
   text-align: start;
 }
+.restaurant__card:hover {
+  box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.2549019608);
+}
 
 footer {
   width: 100%;
@@ -676,6 +699,7 @@ footer .info h1 {
   font-weight: 500;
   font-size: 1.4em;
   color: #ffffff;
+  margin: 0;
 }
 @media (min-width: 1024px) {
   footer .info h1 {
@@ -696,14 +720,14 @@ footer .info .info__contact {
   display: flex;
   flex-direction: column;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   footer {
     justify-content: end;
   }
   footer .info {
-    width: 75%;
+    width: 100%;
     justify-content: right;
-    gap: 5%;
+    gap: 2%;
     flex-direction: row-reverse;
   }
   footer .info .info__contact {
@@ -711,9 +735,10 @@ footer .info .info__contact {
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    gap: 20px;
+    gap: 15px;
   }
 }
+
 .restaurant {
   width: 100%;
   box-sizing: border-box;
@@ -749,12 +774,14 @@ footer .info .info__contact {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 20px;
 }
 .restaurant__menu .restaurant__info h1 {
   display: block;
   font-family: Shrikhand;
   font-size: 1.4em;
   font-weight: 500;
+  margin: 0;
 }
 .restaurant__menu .restaurant__info .restaurant__rate span {
   background-color: #f6f6f6;
@@ -783,16 +810,16 @@ footer .info .info__contact {
   text-transform: uppercase;
   margin: 0;
   /*        @media (min-width: 768px) and (max-width: 1024px){
-        display: none;
-      }*/
+    display: none;
+  }*/
 }
 .restaurant__menu .recipes__stylebar {
   width: 40px;
   height: 3px;
   background-color: #008766;
   /*    @media (min-width: 768px) and (max-width: 1024px){
-        display: none;
-      }*/
+    display: none;
+  }*/
 }
 @media (min-width: 1025px) {
   .restaurant__menu {
@@ -917,4 +944,7 @@ footer .info .info__contact {
 }
 .recipes__choice .recipes__choice--extend:hover {
   width: 100%;
+}
+.recipes__choice:hover {
+  box-shadow: 0px 8px 15px 0px rgba(0, 0, 0, 0.2549019608);
 }/*# sourceMappingURL=index.css.map */
