--- a/sass/partials/_button.scss
+++ b/sass/partials/_button.scss
@@ -6,7 +6,8 @@
 }
 
 .button__gradient:hover {
-  background: $gradientreverse;
+  @include ombrage-dark;
+  background: $gradientlighten;
   transition: all ease-in-out 0.3s;
 }
 
