--- a/sass/partials/_structure.scss
+++ b/sass/partials/_structure.scss
@@ -38,6 +38,9 @@ section{
 h1{
     @include tall;
     @include fat;
+    margin: 0;
+    margin-bottom: 40px;
+
 }
 
 p{
@@ -77,12 +80,13 @@ a{
     @media (min-width : 768px) and (max-width: 1024px) {
    
         section{
-        padding: 10px 30px;
+        padding: 30px 30px;
     }
     .howto{
         @include boxbasic;
-        @include row;
+        @include column;
         justify-content: space-between;
+
     }
     
     .restaurant__list{
