--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -1,4 +1,4 @@
-$first-color: #9356dc;
+$first-color: #9256dc;
 $second-color: #ff79da;
 $third-color: #99e2d0;
 $dark-grey: #353535;
@@ -7,8 +7,11 @@ $light-grey: #f6f6f6;
 $white: #ffffff;
 $black: #000000;
 $nouveau: #008766;
+$firstcolorlighten: lighten($first-color, 5%);
+$secondcolorlighten: lighten($second-color,5%);
 
 $txt-main: Roboto;
 $txt-fantasy: Shrikhand;
-$gradient: linear-gradient(to top, $first-color, $second-color);
+$gradient: linear-gradient($first-color, $second-color);
+$gradientlighten: linear-gradient($firstcolorlighten, $secondcolorlighten);
 $gradientreverse: linear-gradient(to bottom, $first-color, $second-color);
