--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -55,9 +55,9 @@
   }
 
   .menu__container {
-    display: flex;
-    flex-direction: column;
-  }
+    @include boxbasic;
+    @include column;
+    }
 
   .recipes {
     width: 100%;
@@ -66,6 +66,10 @@
     flex-direction: column;
     gap: 10px;
     margin: 30px 0;
+    @media (min-width: 768px) and (max-width: 1024px) {
+      width: 32%;
+      margin: auto;
+    }
   }
 
   h2 {
@@ -73,10 +77,7 @@
     @include thin;
     text-transform: uppercase;
     margin: 0;
-    // POUR LA VERSION AVEC LE MENU LATERAL UNIQUEMENT***********************
-    /*        @media (min-width: 768px) and (max-width: 1024px){
-      display: none;
-    }*/
+  
   }
 
   .recipes__stylebar {
@@ -104,6 +105,8 @@
 
   .menu__container{
     @include row;
+    width: 100%;
+    box-sizing: border-box;
     gap: 2%;
     font-size: 0.9em;
     }
