mise à jour du fichier source
misa a jour du dépot local

--- a/sass/index.css
+++ b/sass/index.css
@@ -920,6 +920,9 @@ footer .info .info__contact {
 .recipes__choice .recipes__choice--extend .recipes__text {
   display: flex;
   flex-direction: column;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   padding-left: 15px;
   gap: 5px;
 }
@@ -928,8 +931,8 @@ footer .info .info__contact {
   margin: 0;
 }
 .recipes__choice .recipes__choice--extend .recipes__price {
-  padding: 0 20px 15px 0;
-  text-align: right;
+  padding: 0 0px 15px 0;
+  text-align: center;
   align-self: flex-end;
 }
 .recipes__choice .recipes__choice--extend .recipes__selected {
