--- a/sass/partials/_menus.scss
+++ b/sass/partials/_menus.scss
@@ -57,6 +57,65 @@
   .menu__container {
     @include boxbasic;
     @include column;
+    .recipes:first-child{
+      animation: slider_menu 0.5s forwards;
+      .recipes__choice:first-child {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 0.3s forwards;
+      }
+      .recipes__choice:nth-child(2) {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 0.6s forwards;
+      }
+      .recipes__choice:nth-child(3) {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 0.9s forwards;
+      }
+      .recipes__choice:last-child {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 1.2s forwards;
+      }
+    }
+    .recipes:nth-child(2){
+      opacity: 0;
+      animation: slider_menu 0.5s 0.5s forwards;
+      .recipes__choice:first-child {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 1.5s forwards;
+      }
+      .recipes__choice:nth-child(2) {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 1.8s forwards;
+      }
+      .recipes__choice:nth-child(3) {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 2.1s forwards;
+      }
+      .recipes__choice:last-child {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 2.4s forwards;
+      }
+    }
+    .recipes:last-child{
+      opacity: 0;
+      animation: slider_menu 0.5s 1s forwards;
+      .recipes__choice:first-child {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 2.7s forwards;
+      }
+      .recipes__choice:nth-child(2) {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 3s forwards;
+      }
+      .recipes__choice:nth-child(3) {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 3.3s forwards;
+      }
+      .recipes__choice:last-child {
+        opacity: 0;
+        animation: appear_elementsmenu 0.3s 3.6s forwards;
+      }
+    }
     }
 
   .recipes {
@@ -109,7 +168,8 @@
     box-sizing: border-box;
     gap: 2%;
     font-size: 0.9em;
-    }
+  }
+    
   }
 }
 
