--- a/sass/partials/_restaurant-card.scss
+++ b/sass/partials/_restaurant-card.scss
@@ -13,6 +13,8 @@
         @include row;
         img{
             width: 100%;
+            display: flex;
+            flex-shrink: 0;
             height: fit-content;
             align-self: center;
         }
